structmeta-tests/tests/compile_fail/struct_meta/option_bool.stderr
error[E0277]: the trait bound `bool: Parse` is not satisfied
 --> $DIR/option_bool.rs:1:10
  |
1 | #[derive(structmeta::StructMeta)]
  |          ^^^^^^^^^^^^^^^^^^^^^^ the trait `Parse` is not implemented for `bool`
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
